[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Inimigos/Coelhinho/Coelhinho.gd" type="Script" id=1]
[ext_resource path="res://Art/Enemies/coelho.png" type="Texture" id=2]
[ext_resource path="res://Art/Enemies/toca.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Inimigos/RecursoSpawner/RecursoSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Singletons/PlayerState.tres" type="Resource" id=5]

[sub_resource type="CapsuleShape2D" id=1]

[node name="Coelhinho" type="Area2D" groups=[
"Enemy",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
player_state = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.5636, 3.5636 )
shape = SubResource( 1 )

[node name="Toca" type="Sprite" parent="."]
position = Vector2( -3.77382, -0.960279 )
texture = ExtResource( 3 )

[node name="Coelho" type="Sprite" parent="."]
position = Vector2( 0.840912, -2.94313 )
texture = ExtResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="AliveTimer" type="Timer" parent="."]
one_shot = true

[node name="RecursoSpawner" parent="." instance=ExtResource( 4 )]
drop_rates = [ Vector2( 1, 3 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]

[connection signal="area_entered" from="." to="." method="_on_Coelhinho_area_entered"]
